2011-04-28  Arno Renevier  <arno@renevier.net>

Reviewed by Gustavo Noronha Silva.

        [Soup] does not load css stylesheets without content-type
        https://bugs.webkit.org/show_bug.cgi?id=59697

        * platform/gtk/Skipped: Enable now passing tests:
         - http/tests/mime/standard-mode-loads-stylesheet-with-empty-content-type.html
         - http/tests/mime/standard-mode-loads-stylesheet-with-text-css-and-invalid-type.html
2011-04-28  Arno Renevier  <arno@renevier.net>

        Reviewed by Gustavo Noronha Silva.

        [Soup] does not load css stylesheets without content-type
        https://bugs.webkit.org/show_bug.cgi?id=59697

        When sniffing content type, do not replace http Content-Type header in
        soup message anymore, but keep sniffed content type in a separate
        variable.

        * platform/network/soup/ResourceHandleSoup.cpp:
        (WebCore::contentSniffedCallback):
        * platform/network/soup/ResourceResponse.h:
        (WebCore::ResourceResponse::sniffedContentType):
        (WebCore::ResourceResponse::setSniffedContentType):
        * platform/network/soup/ResourceResponseSoup.cpp:
        (WebCore::ResourceResponse::updateFromSoupMessage):

Canonical link: https://commits.webkit.org/74918@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85207 268f45cc-cd09-0410-ab3c-d52691b4dbfc